[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/calendar/calendar.png" type="Texture" id=1]
[ext_resource path="res://assets/calendar/calendar_page.png" type="Texture" id=2]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=3]
[ext_resource path="res://scenes/Calendar.gd" type="Script" id=4]

[node name="Calendar" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 4 )

[node name="CalendarSprite" type="Sprite" parent="."]
position = Vector2( -4, -3 )
texture = ExtResource( 1 )

[node name="CalendarPage" type="Node2D" parent="."]

[node name="PageSprite" type="Sprite" parent="CalendarPage"]
position = Vector2( 4.76837e-07, 9.53674e-07 )
texture = ExtResource( 2 )

[node name="DayLabel" type="Label" parent="CalendarPage"]
margin_left = -20.0
margin_top = -8.0
margin_right = 20.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.678431, 0.12549, 1 )
text = "02"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonthLabel" type="Label" parent="CalendarPage"]
margin_left = -20.0
margin_top = 9.53674e-07
margin_right = 20.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.678431, 0.12549, 1 )
text = "02"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
